--- a/srcs/.env
+++ b/srcs/.env
@@ -1,24 +1,26 @@
+#NGINX
+C="ES"
+ST="AND"
+L="Malaga"
+O="Telefonica"
+OU="42-Telefonica"
+CN="login.42.fr"
+UID="imoro-sa"
 
-docker build -t nginx /home/fwks/Documentos/Inception/srcs/requirements/nginx
-docker build -t mariadb /home/fwks/Documentos/Inception/srcs/requirements/mariadb
-docker build -t wordpress /home/fwks/Documentos/Inception/srcs/requirements/wordpress
+#MARIADB
+MYSQL_HOSTNAME="mariadb"
+MYSQL_DATABASE="db"
+MYSQL_USER="imoro-sa"
+MYSQL_PASSWORD="imoro-sa_1234"
+MYSQL_ROOT_USER="root"
+MYSQL_ROOT_PASSWORD="root_1234"
 
-docker network create "inception"
-
-docker run --name nginx --network inception -p 443:443 -d nginx
-docker run --name mariadb --network inception -d mariadb
-docker run --name wordpress --network inception -d wordpress
-
-(nginx se para si se lanza el primero ya que no encuentra wordpress)
-
-docker exec -it wordpress /bin/bash
-
-apt install curl
-
-curl -k https://nginx:443
-Aparece la página de inicio de nginx.
-
-curl -k https://localhost
-curl: (7) Failed to connect to localhost port 443: Connection refused
-
-Prácticamente todas las conexiones son rechazadas ¿?
+#WORDPRESS
+DOMAIN="imoro-sa.42.fr"
+WORDPRESS_TITLE="Inception"
+WORDPRESS_ADMIN_USER="imoro-sa"
+WORDPRESS_ADMIN_PASSWORD="imoro-sa_1234"
+WORDPRESS_ADMIN_EMAIL=" imoro-sa@student.42malaga.com "
+WORDPRESS_USER="wp_user"
+WORDPRESS_USER_EMAIL="wp_user@gmail.com"
+WORDPRESS_USER_PASSWORD="wp_user_1234"
