--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,3 @@
-#NGINX
 C="ES"
 ST="AND"
 L="Malaga"
@@ -7,20 +6,18 @@ OU="42-Telefonica"
 CN="login.42.fr"
 UID="imoro-sa"
 
-#MARIADB
-MYSQL_HOSTNAME="mariadb"
-MYSQL_DATABASE="db"
+MYSQL_HOSTNAME="mariadb-host"
+MYSQL_DATABASE="mysql-db"
 MYSQL_USER="imoro-sa"
 MYSQL_PASSWORD="imoro-sa_1234"
 MYSQL_ROOT_USER="root"
 MYSQL_ROOT_PASSWORD="root_1234"
 
-#WORDPRESS
 DOMAIN="imoro-sa.42.fr"
 WORDPRESS_TITLE="Inception"
 WORDPRESS_ADMIN_USER="imoro-sa"
 WORDPRESS_ADMIN_PASSWORD="imoro-sa_1234"
-WORDPRESS_ADMIN_EMAIL=" imoro-sa@student.42malaga.com "
+WORDPRESS_ADMIN_EMAIL=" imoro-sa@student.42malaga.com"
 WORDPRESS_USER="wp_user"
 WORDPRESS_USER_EMAIL="wp_user@gmail.com"
 WORDPRESS_USER_PASSWORD="wp_user_1234"
