wordpress ok/ nginx modificado a script

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,14 +3,12 @@ FROM debian:bullseye
 #instalación de curl para poder comprobar si el localhost se muestra correctamente en el container
 RUN apt update -y && apt install nginx -y && apt install openssl -y && apt install curl -y
 
-COPY ./tools/nginx_script.sh /
+COPY /conf/default /
+
+COPY /tools/nginx_script.sh /
 
 RUN chmod +x /nginx_script.sh
 
-RUN /nginx_script.sh
-
-COPY ./conf/default /etc/nginx/sites-available/
-
 EXPOSE 443
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/nginx_script.sh"]
