--- a/srcs/.env
+++ b/srcs/.env
@@ -6,7 +6,7 @@ OU="42-Telefonica"
 CN="login.42.fr"
 UID="imoro-sa"
 
-MYSQL_HOSTNAME="mariadb-host"
+MYSQL_HOSTNAME="mariadb"
 MYSQL_DATABASE="mysql-db"
 MYSQL_USER="imoro-sa"
 MYSQL_PASSWORD="imoro-sa_1234"
